src/test/compile-fail/use-meta.rc
// error-pattern:can't find crate for 'std'

use std (name = "std",
	 vers = "bogus");